--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     //My
     implementation("com.squareup.okhttp3:okhttp:4.9.0")
     implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'com.github.yukuku:ambilwarna:2.0.1'
 
     implementation 'androidx.navigation:navigation-fragment:2.3.1'
     implementation 'androidx.navigation:navigation-ui:2.3.1'
